--- a/style.css
+++ b/style.css
@@ -129,3 +129,28 @@ a{
     border-radius: 12px;
 }
 
+.third-section{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 200px;
+    background-color: #E5E7EB;
+}
+
+.quote{
+    display: flex;
+    font-size: 36px;
+    color: #1F2937;
+    font-weight: 300;
+    font-style: italic;
+}
+
+.author{
+    display: flex;
+    width: 100%;
+    justify-content: flex-end;
+    font-size: 24px;
+    font-weight: bold;
+}
+
