--- a/style.css
+++ b/style.css
@@ -1,4 +1,9 @@
 
+body {
+  margin: 0;
+  padding: 0;
+}
+
 .first-section{
     background-color:#1F2937;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -158,7 +163,8 @@ a{
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-top: 100px; ;
+    padding-top: 100px;
+    padding-bottom: 100px;
     
 }
 
@@ -202,5 +208,14 @@ a{
 .action-button:active {
     background-color: #1f4fbf;
     transform: scale(0.97);
+}
+
+.footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #1F2937;
+    color: #F9FAF8;
+    padding: 18px;
 }
 
